# job-kuai-tie-api

./: .dockerignore  .env.stage  .gitignore  .pre-commit-config.yaml  Dockerfile  README  alembic.ini  database.db  docker-compose.dockerhub.yml  docker-compose.stage.yml  docker-entrypoint.sh  example.env  example.env.stage  main.py  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 31c1dad960d9_initial_migration_with_account_job_.py  3cee731ff0cc_create_account_job_company_category_.py  5ab39919d6d4_chore_revised_email_to_be_unique.py  96f853210895_initial_migration.py
app/: config.py  db.py  main.py  router.py
app/core/: __init__.py
app/model/: __init__.py  account.py  base.py  category.py  company.py  job.py  job_category.py  mixin.py  token.py
app/router/: __init__.py  account.py  base.py  category.py  company.py  hero.py  job.py  security.py
app/security/: __init__.py  authentication.py  password.py  token.py
tests/: conftest.py  test_account.py  test_category.py  test_company.py  test_hero.py  test_job.py  test_token.py
tests/factory/: __init__.py  create_model.py  model_factory.py
