[project]
name = "fast-api-demo-104"
version = "0.1.0"
description = "This project is a demo project for 104 interview, which mainly targeting FastAPI exploration."
authors = [
    {name = "Huang Chuan",email = "river1440@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# [tool.poetry.group.dev]
# optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.6"

# [tool.poetry.group.test]
# optional = true
pre-commit = "^4.2.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"

